bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: type mismatch;
 found   : Int
 required: Boolean
  if(( 110 >= 90 >= n) || (190 >= n)){
                    ^