bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if(( 110 >= 90 >= n) || (190 >= n)){
    return true
  }
  else {return false}
}